--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-UA-Compatible" coontent="IE-edge"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>MCoin ICO Sales</title>
+		<title>MCoin ICO</title>
 		<!--<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">-->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	</head>
@@ -12,26 +12,31 @@
 		<div class="container" style="width: 650px">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 class="text-center">MCoin ICO Sale</h1>
+					<h1 class="text-center">MCoin ICO</h1>
 					<hr />
 					<br />
 				</div>
 
-				<div class="loader">
+				<div id="loader">
 					<p class="text-center">Loading...</p>	
 				</div>
 
-				<div id="content" class="text-center">
+				<div id="freeToken">
+					<p>Free token available.</p>
+					<button>Request Free Token</button>
+				</div>
+
+				<div id="content" class="text-center" style="display: none">
 					<p>
 						Introducing MCoin (MCO)!
 						Token price is <span class="token-price"></span> Ether.
-						You currently have <span class="mcoin-balance"></span> MCO.
+						You currently have <span id="mcoin-balance"></span> MCO.
 					</p>
 					<br />
-					<form role="form">
+					<form onSubmit="App.buyTokens(); return false;" role="form">
 						<div class="form-group">
 							<div class="input-group">
-								<input id="numberOfToken" class="form-contrl input-lg" type="number" name="number" value="1" min="1"
+								<input id="numberOfTokens" class="form-contrl input-lg" type="number" name="number" value="1" min="1"
 								pattern="[0-9]"></input>
 								<span class="input-group-btn">
 									<button type="submit" class="btn btn-primary btn-lg">Buy Tokens</button>
